# bank-simulation

./: .gitignore  Bank.sln  CMakeLists.txt  README.md  bank.cpp  bank.hpp
Bank/: Accounts.cs  Program.cs  Transactions.cs
cpp/: .gitignore  CMakeLists.txt  bank.cpp  main.cpp
cpp/include/: account.hpp  utils.hpp
cpp/src/: account.cpp
cpp/tests/: CmakeLists.txt  account_tests.cpp
csharp/Bank/: Accounts.cs  Bank.csproj
